--- a/index.html
+++ b/index.html
@@ -1,27 +1,49 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="rus">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ToDo List</title>
+    <title>Список дел</title>
     <link rel="stylesheet" href="app.css">
+    <style>
+        /* Дополнительные стили для заголовка */
+        h1 {
+            text-align: center;
+            margin-bottom: 20px;
+            color: #333;
+            font-family: Arial, sans-serif;
+        }
+
+        /* Стили для кнопки "Добавить событие" */
+        #addEventButton {
+            background-color: #28a745;
+            color: #fff;
+            border: none;
+            border-radius: 4px;
+            padding: 10px 20px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+            margin-bottom: 20px;
+        }
+
+        #addEventButton:hover {
+            background-color: #218838;
+        }
+    </style>
 </head>
 <body>
     <div class="container">
+        <h1>Список дел</h1> <!-- Добавленный заголовок -->
+        <button id="addEventButton" onclick="showAddEventMenu()">Добавить событие</button> <!-- Кнопка "Добавить событие" -->
         <div id="calendarContainer">
             <div id="divCal"></div>
             <button id="btnPrev">Предыдущий</button>
             <button id="btnNext">Следующий</button>
         </div>
         <div id="eventsContainer">
-            <!-- Content for events -->
+            <!-- Сюда будет добавляться информация о событиях -->
         </div>
     </div>
     <script src="app.js"></script>
 </body>
-<<<<<<< Updated upstream
 </html>
-=======
-</html>
-
->>>>>>> Stashed changes
